--- a/src/app/admin/layout/admin-layout/admin-layout.component.html
+++ b/src/app/admin/layout/admin-layout/admin-layout.component.html
@@ -11,7 +11,6 @@
     <app-admin-sidebar></app-admin-sidebar>
 
 
-
     <!-- Page wrapper  -->
     <div class="page-wrapper">
       <div class="container-fluid">
@@ -57,6 +56,8 @@
 
 
 <!-- MODALES -->
-
 <!-- Modulo gestión persona -->
 <app-modal-persona></app-modal-persona>
+
+<!-- Modulo gestión usuarios -->
+<app-modal-usuarios></app-modal-usuarios>
