--- a/src/app/admin/shared/admin-footer/admin-footer.component.html
+++ b/src/app/admin/shared/admin-footer/admin-footer.component.html
@@ -1,7 +1,8 @@
  <!-- footer -->
  <!-- ============================================================== -->
  <footer class="footer">
-   © 2017 Admin Pro by wrappixel.com
+   © {{ getYear() }} Gobierno Autónomo Municipal de Cliza - Desarrollado por la Unidada de Tecnologías de Información y
+   Comunicaciónes (TICs)
  </footer>
  <!-- ============================================================== -->
  <!-- End footer -->
