CRUD Titulares en el frontend configuracion completa de datatables

--- a/src/app/admin/layout/admin-layout/admin-layout.component.html
+++ b/src/app/admin/layout/admin-layout/admin-layout.component.html
@@ -31,6 +31,7 @@
                 persona
                 roles
                 usuarios
+                ultimas noticias
                -->
                 <!-- Rederizado de las paginas de adminPro -->
                 <router-outlet></router-outlet>
@@ -61,3 +62,8 @@
 
 <!-- Modulo gestión usuarios -->
 <app-modal-usuarios></app-modal-usuarios>
+
+
+<!-- MERCADO -->
+<!-- Modal titular puesto -->
+<app-modal-titular></app-modal-titular>
