--- a/src/app/web/components/seccion-interes-ciudadano/seccion-interes-ciudadano.component.html
+++ b/src/app/web/components/seccion-interes-ciudadano/seccion-interes-ciudadano.component.html
@@ -3,6 +3,15 @@
 
   <div class="seccion-iconos row justify-content-between">
 
+    <div class="col-12 mb-4">
+      <h2 class="text-uppercase h2-web" style="margin-bottom: 0px;">De Interes Ciudadano</h2>
+      <P class="circulos text-center">
+        <i class="far fa-circle circulos__icons"></i>
+        <i class="far fa-circle circulos__icons"></i>
+        <i class="far fa-circle circulos__icons"></i>
+      </P>
+    </div>
+
     <!-- Gaceta Municipal -->
     <div class="col-12 col-md-4 iconos animated fadeInLeft" style="animation-delay: 0.3s; animation-duration: 1.3s;">
       <p class="seccion-iconos__icon"><i class="bi bi-bank"></i></p>
