Formulario Agregar puestos implementacion se select2

--- a/src/app/admin/layout/admin-layout/admin-layout.component.html
+++ b/src/app/admin/layout/admin-layout/admin-layout.component.html
@@ -67,3 +67,9 @@
 <!-- MERCADO -->
 <!-- Modal titular puesto -->
 <app-modal-titular></app-modal-titular>
+
+<!-- Modal sector mercado -->
+<app-modal-sector></app-modal-sector>
+
+<!-- Modal puesto -->
+<app-modal-puesto></app-modal-puesto>
