--- a/src/app/admin/pages/mercados/sector-mercado/sector-mercado.component.html
+++ b/src/app/admin/pages/mercados/sector-mercado/sector-mercado.component.html
@@ -3,8 +3,8 @@
 <div class="d-flex justify-content-between animated fadeIn fast">
 
   <div class="titulo-principal">
-    <h4 class="card-title">Administración de titulares de puestos de mercado</h4>
-    <h6 class="card-subtitle">Lista de datos de la tabla Titulares</h6>
+    <h4 class="card-title">Administración de sectores de mercados</h4>
+    <h6 class="card-subtitle">Lista de datos de sectores de mercado</h6>
   </div>
 
   <div class="btn-agregar">
@@ -13,20 +13,19 @@
 
 </div>
 
-<table datatable [dtOptions]="this.dtOptions" class="row-border hover" id="myTableTitulars">
+<table datatable [dtOptions]="this.dtOptions" class="row-border hover" id="myTableSector">
   <thead>
     <tr>
       <th>#</th>
       <th>Identificador</th>
-      <th>Nombres</th>
-      <th>Apellidos</th>
-      <th>Carnet</th>
+      <th>Mercado</th>
+      <th>Sector</th>
+      <th>Descripción</th>
       <th>Estado</th>
       <th>Acciones</th>
     </tr>
   </thead>
   <tbody>
-
+    <!-- Aqui la logica de la tabla de datos -->
   </tbody>
 </table>
-
