--- a/src/app/admin/pages/mercados/titular-mercado/modal-titular/modal-titular.component.html
+++ b/src/app/admin/pages/mercados/titular-mercado/modal-titular/modal-titular.component.html
@@ -28,7 +28,7 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="apellidos_apellidos">Apellidos<span class="text-danger">*</span></label>
+            <label for="apellidos_titular">Apellidos<span class="text-danger">*</span></label>
             <input type="text" class="form-control" id="apellidos_titular" placeholder="Ingrese sus apellidos"
               formControlName="apellidos">
             <!-- Validacion -->
