--- a/src/app/admin/pages/mercados/titular-mercado/titular-mercado.component.html
+++ b/src/app/admin/pages/mercados/titular-mercado/titular-mercado.component.html
@@ -3,8 +3,8 @@
 <div class="d-flex justify-content-between animated fadeIn fast">
 
   <div class="titulo-principal">
-    <h4 class="card-title">Administración de sectores de mercados</h4>
-    <h6 class="card-subtitle">Lista de datos de la tabla sector de mercado</h6>
+  <h4 class="card-title">Administración de titulares de puestos de mercado</h4>
+    <h6 class="card-subtitle">Lista de datos de la tabla Titulares</h6>
   </div>
 
   <div class="btn-agregar">
@@ -16,10 +16,11 @@
 <table datatable [dtOptions]="this.dtOptions" class="row-border hover" id="myTableTitulars">
   <thead>
     <tr>
-      <th>#</th>
+       <th>#</th>
       <th>Identificador</th>
-      <th>Sector</th>
-      <th>Descripción</th>
+      <th>Nombres</th>
+      <th>Apellidos</th>
+      <th>Carnet</th>
       <th>Estado</th>
       <th>Acciones</th>
     </tr>
