--- a/src/app/admin/pages/usuarios/modal-usuarios/modal-usuarios.component.html
+++ b/src/app/admin/pages/usuarios/modal-usuarios/modal-usuarios.component.html
@@ -13,10 +13,10 @@
 
         <div class="modal-body modal-body--form">
           <div class="form-group">
-            <label for="persona_id">Funcionario<span class="text-danger">*</span></label>
+            <label for="persona-user-select2">Funcionario<span class="text-danger">*</span></label>
 
             <!-- <h5 class="m-t-30">Single select2</h5> -->
-            <select class="select2 form-control custom-select" id="persona-select2" formControlName="persona_id"
+            <select class="select2 form-control custom-select" id="persona-user-select2" formControlName="persona_id"
               style="width: 100%; height:36px;">
 
               <option value="" disabled selected>-Selecionar-</option>
